Closed Bug 417264 Opened 16 years ago Closed 16 years ago

Bookmarks with special unicode characters are not imported from Safari

Categories

(Firefox :: Migration, defect, P2)

x86
macOS
defect

Tracking

()

RESOLVED FIXED
Firefox 3

People

(Reporter: vincent.isambart, Assigned: dietrich)

References

Details

Attachments

(1 file)

User-Agent:       Mozilla/5.0 (Macintosh; U; Intel Mac OS X; ja-jp) AppleWebKit/523.15.1 (KHTML, like Gecko) Version/3.0.4 Safari/523.15
Build Identifier: Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9b3) Gecko/2008020511 Firefox/3.0b3

When I imported my bookmarks from Safari, all my bookmarks and folders that had Japanese characters in their name were not imported.


Reproducible: Always

Steps to Reproduce:
1. Create a bookmark in Safari with some Japanese characters in them
2. In FF3, click on Import and backup -> Import and select Safari.
Actual Results:  
The bookmark with the Japanese name is not imported.

Expected Results:  
The bookmark with the Japanese name should be imported.
Confirming on the en-US build using Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9b4pre) Gecko/2008021304 Minefield/3.0b4pre. However, this is not limited to just Japanese characters. I quick test using Greek characters yielded the same result. Will have to figure out how to change the summary to reflect that.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Version: unspecified → Trunk
Component: Bookmarks → Migration
QA Contact: bookmarks → migration
Note that there is a simple workaround: just export the bookmarks in Safari (in the File menu), and import the generated HTML in Firefox.
Attached patch fixSplinter Review
Assignee: nobody → dietrich
Status: NEW → ASSIGNED
Attachment #311745 - Flags: review?(mano)
drivers: lets make migration from other browser painless and dataloss-less.
Flags: in-litmus?
Flags: blocking-firefox3?
Priority: -- → P3
Target Milestone: --- → Firefox 3
Comment on attachment 311745 [details] [diff] [review]
fix

r=mano
Attachment #311745 - Flags: review?(mano) → review+
Attachment #311745 - Flags: approval1.9?
Flags: blocking-firefox3? → blocking-firefox3+
Priority: P3 → P2
Attachment #311745 - Flags: approval1.9? → approval1.9+
Checking in browser/components/migration/src/nsSafariProfileMigrator.cpp;
/cvsroot/mozilla/browser/components/migration/src/nsSafariProfileMigrator.cpp,v  <--  nsSafariProfileMigrator.cpp
new revision: 1.50; previous revision: 1.49
done
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Summary: Bookmarks with Japanese characters are not imported from Safari → Bookmarks with special unicode characters are not imported from Safari
bug 434473 reports that a similar issue is still visible in Firefox 3 RC1. Should this be reopened?
Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9) Gecko/2008053008 Firefox/3.0

Yeah, the issue seems to be with folders now. Any folder with special unicode characters (including accents as described in Bug 434473) is not imported. I tired, Japanese, French and Chinese and each time, the folder wouldn't import from Safari.

If the link is not sitting in a folder, it will transfer over so only a part of the issue has reemerged.

Steps to reproduce are the same except make sure that you create a *FOLDER* with special unicode characters and try to import that.

Reopening.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Flags: blocking-firefox3+ → blocking-firefox3?
Flags: blocking-firefox3?
Flags: blocking-firefox3.1?
Flags: blocking-firefox3-
Please file a new bug about that issue. REOPENing a bug is almost never a good idea, unless the patch that landed is going to be backed out.
Status: REOPENED → RESOLVED
Closed: 16 years ago16 years ago
Resolution: --- → FIXED
Gotcha. Filed bug 438744. Sorry about that. :)
Flags: blocking-firefox3.1?
https://litmus.mozilla.org/show_test.cgi?id=7717 added to Litmus.
Flags: in-litmus? → in-litmus+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: