Bug 417264 ? Bookmarks with Japanese characters are not imported from Safari (r=mano)